[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/ai_csharp/player_mind_modules/SubMind.cs" type="Script" id=1]
[ext_resource path="res://scripts/ai/player_mind.gd" type="Script" id=2]
[ext_resource path="res://scripts/ai/player_mind_modules/engine_controller.gd" type="Script" id=6]
[ext_resource path="res://scripts/ai/player_mind_modules/interface_mode.gd" type="Script" id=7]
[ext_resource path="res://scripts/craft_camera.gd" type="Script" id=9]
[ext_resource path="res://scripts/ai/player_mind_modules/packs.gd" type="Script" id=10]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="CubeMesh" id=2]

[node name="PlayerMind" type="Node"]
script = ExtResource( 2 )

[node name="SubMind" type="Node" parent="."]
script = ExtResource( 1 )

[node name="EngineContorller" type="Node" parent="."]
script = ExtResource( 6 )

[node name="CameraInterface" type="Node" parent="."]
script = ExtResource( 7 )

[node name="PackManager" type="Node" parent="."]
script = ExtResource( 10 )

[node name="OrbitCamera" type="Camera" parent="."]
transform = Transform( -1, -7.04996e-09, -1.1443e-07, -8.00021e-08, 0.757834, 0.652447, 8.21191e-08, 0.652447, -0.757834, 15.6678, 24.5213, 34.1868 )
far = 8192.0
script = ExtResource( 9 )
distance = 15.0

[node name="CameraLocationDebug" type="Spatial" parent="OrbitCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.90735e-06, 0, 5.51025 )

[node name="MeshInstance4" type="MeshInstance" parent="OrbitCamera/CameraLocationDebug"]
transform = Transform( 1, -2.84217e-14, -7.10543e-15, 0, 2.63317, -2.98023e-08, 0, -1.19209e-07, 1, 0, 2, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="OrbitCamera/CameraLocationDebug"]
transform = Transform( 1, -1.84741e-13, 2.84217e-14, 0, -1.19209e-07, -1, 0, 2.63317, -5.96046e-08, 0, 0, -2 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="OrbitCamera/CameraLocationDebug"]
transform = Transform( -4.37114e-08, -2.63317, 4.37114e-08, 0, -1.151e-07, -1, 1, -1.151e-07, -2.98023e-08, 3, 0, 0 )
mesh = SubResource( 1 )
material/0 = null
